[package]
name = "OS_Project"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21"
egui_extras = "0.21"
eframe = "0.21"
walkdir = "2"
#eframe = "0.23.0"
#egui = "0.23.0"
#egui_extras = "0.23.0"
env_logger = "0.10.0"
#walkdir = "2.4.0"
native-dialog = "0.6.4"
sysinfo = "0.23.0"
dirs = "5.0.1"
detect-duplicates = "0.2.1"
